--- a/deploy/crd.yaml
+++ b/deploy/crd.yaml
@@ -1,9 +1,9 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: cockroachdbs.charts.helm.k8s.io
+  name: cockroachdbs.helm.operator-sdk
 spec:
-  group: charts.helm.k8s.io
+  group: helm.operator-sdk
   names:
     kind: Cockroachdb
     listKind: CockroachdbList
