--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -4,86 +4,51 @@ metadata:
   creationTimestamp: null
   name: cockroachdb-operator
 rules:
-- apiGroups:
-  - ""
-  resources:
-  - namespaces
-  verbs:
-  - get
-- apiGroups:
-  - ""
-  resources:
-  - configmaps
-  - secrets
-  verbs:
-  - '*'
-- apiGroups:
-  - ""
-  resources:
-  - events
-  verbs:
-  - create
-- apiGroups:
-  - policy
-  resources:
-  - poddisruptionbudgets
-  verbs:
-  - '*'
-- apiGroups:
-  - ""
-  resources:
-  - services
-  verbs:
-  - '*'
-- apiGroups:
-  - apps
-  resources:
-  - statefulsets
-  verbs:
-  - '*'
-- apiGroups:
-  - batch
-  resources:
-  - jobs
-  verbs:
-  - '*'
-- apiGroups:
-  - monitoring.coreos.com
-  resources:
-  - servicemonitors
-  verbs:
-  - get
-  - create
-- apiGroups:
-  - apps
-  resourceNames:
-  - cockroachdb-operator
-  resources:
-  - deployments/finalizers
-  verbs:
-  - update
-- apiGroups:
-  - ""
-  resources:
-  - pods
-  verbs:
-  - get
-- apiGroups:
-  - apps
-  resources:
-  - replicasets
-  - deployments
-  verbs:
-  - get
-- apiGroups:
-  - charts.helm.k8s.io
-  resources:
-  - '*'
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
+
+# Allowed actions on CRD
+- apiGroups: ["helm.operator-sdk"]
+  resources: ["cockroachdbs", "cockroachdbs/status"]
+  verbs: ["get", "list", "create", "update", "delete", "watch"]
+
+# Allow special aactions
+- apiGroups: [""]
+  resources: ["events"]
+  verbs: ["get", "list", "create", "update", "delete", "patch", "watch"]
+- apiGroups: ["policy"]
+  resources: ["poddisruptionbudgets"]
+  verbs: ["get", "list", "create", "update", "delete", "patch", "watch"]
+
+# Allowed actions on Pods
+- apiGroups: [""]
+  resources: ["pods","pods/exec", "pods/log"]
+  verbs: ["get", "list", "create", "update", "delete", "patch", "watch"]
+
+# Allowed actions on apps
+- apiGroups: ["apps", "batch"]
+  resources: ["*"]
+  verbs: ["get", "list", "create", "update", "delete", "patch", "watch"]
+
+# Allowed actions on Services
+- apiGroups: [""]
+  resources: ["services"]
+  verbs: ["get", "list", "create", "update", "delete", "patch", "watch"]
+
+# Allowed actions on Secrets
+- apiGroups: [""]
+  resources: ["secrets", "configmaps"]
+  verbs: ["get", "list", "create", "update", "delete", "patch", "watch"]
+
+# Allow all actions on Service Accounts
+- apiGroups: [""]
+  resources: ["serviceaccounts", "serviceaccounts/token"]
+  verbs: ["get", "list", "create", "update", "delete", "patch", "watch"]
+
+# Allow all for Role and Role Binding
+- apiGroups: ["rbac.authorization.k8s.io"]
+  resources: ["roles", "rolebindings"]
+  verbs: ["get", "list", "create", "update", "delete", "patch", "watch"]
+
+# Allow listing Namespaces
+- apiGroups: [""]
+  resources: ["namespaces"]
+  verbs: ["list", "get", "watch"]
